2020-12-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.5 released.

	* tramp.el: Bump version.

2020-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 27.2.

2020-11-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.4 released.

2020-11-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file): Add sanity checks.

2020-11-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-system-name): New defconst.
	(tramp-default-host, tramp-restricted-shell-hosts-alist)
	(tramp-local-host-regexp):
	* tramp-sh.el (tramp-maybe-open-connection): Use it.  (Bug#44481)

2020-11-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-directory-files)
	(tramp-handle-directory-files-and-attributes):
	* tramp-adb.el (tramp-adb-handle-directory-files-and-attributes):
	* tramp-rclone.el (tramp-rclone-handle-directory-files):
	* tramp-sh.el (tramp-sh-handle-directory-files-and-attributes):
	* tramp-smb.el (tramp-smb-handle-directory-files): Add _COUNT.
	Make the functions forward compatible.

	* tramp-gvfs.el (tramp-gvfs-enabled):
	Increase `max-specpdl-size' temporarily.

2020-10-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.3 released.

2020-10-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-make-process): Accept nil COMMAND.
	(Bug#44151)

2020-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-make-process): Don't use heredoc
	script whent the argument contains a string.

2020-10-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-reread-directory-timeout): Make it obsolete.
	(Bug#43932)

2020-10-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-emacs-compiled-version): New defconst.
	Raise a warning, when it is not equal to the Emacs version.
